[workspace]
resolver = "2"
members = [
  "move0",
  "move0/methods",
]
exclude = [
  "risc0",
  "move",
]

[workspace.package]
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
# risc0-build = { git = "https://github.com/risc0/risc0", rev = "8a580a237b76695e56e491ae52e2ece93997bd7d", default-features = false }
# risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "8a580a237b76695e56e491ae52e2ece93997bd7d", default-features = false }
risc0-build = { path = "./risc0/risc0/build", default-features = false }
risc0-zkvm = { path = "./risc0/risc0/zkvm", default-features = false }
serde = "1.0"

[profile.bench]
lto = true

# Always optimize; otherwise tests take excessively long.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
