[package]
name = "move0-guest"
version = "0.1.0"
edition = "2021"

[workspace]
# can't be part of outer workspace as it is built separately

[dependencies]

# "std" feature is required by move-vm-runtime crate
risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "8a580a237b76695e56e491ae52e2ece93997bd7d", default-features = false, features = ["std"] }

# patched version with fail = "0.5" that depends on getrandom = "2.0" which is compatible with risc0 guest
move-vm-runtime = { git = "https://github.com/semenov-vladyslav/move", branch = "main-bump-fail-0.5", default-features = false }
move-core-types = { git = "https://github.com/semenov-vladyslav/move", branch = "main-bump-fail-0.5", default-features = false }
move-vm-types = { git = "https://github.com/semenov-vladyslav/move", branch = "main-bump-fail-0.5", default-features = false }
move-binary-format = { git = "https://github.com/semenov-vladyslav/move", branch = "main-bump-fail-0.5", default-features = false }
